--- a/5.html
+++ b/5.html
@@ -112,7 +112,7 @@
           hidden
         >
           <div class="gh-additional-info-fields-container">
-            <div class="gh-label-input-group">
+            <div class="gh-label-group">
               <label for="year-established" class="gh-label"
                 >Year Established</label
               >
@@ -123,7 +123,7 @@
                 placeholder=""
               />
             </div>
-            <div class="gh-label-input-group">
+            <div class="gh-label-group">
               <label for="additional-locations" class="gh-label"
                 >Additional Location(s)</label
               >
@@ -133,7 +133,7 @@
                 placeholder="City and State..."
               ></textarea>
             </div>
-            <div class="gh-label-input-group">
+            <div class="gh-label-group">
               <label for="project-focus" class="gh-label"
                 >Company or project focus
                 <span id="focus-count" class="gh-char-count">0/250</span></label
@@ -145,7 +145,7 @@
                 placeholder="Type here..."
               ></textarea>
             </div>
-            <div class="gh-label-input-group">
+            <div class="gh-label-group">
               <label class="gh-label">Select areas of interest</label>
               <div
                 class="gh-custom-select"
