--- a/7.html
+++ b/7.html
@@ -194,32 +194,32 @@
                   <div class='gh-attendee-details-checkbox-row'>
                     <label class='gh-attendee-details-checkbox-label'><input name='main-contact' type='checkbox' class='gh-attendee-details-main-contact' /> <span class='gh-attendee-details-checkbox-label-text'>Designate as main visit contact</span></label>
                   </div>
-                  <div class="gh-label-input-group">
-                    <label class='gh-attendee-details-label'>Mobile Phone Number</label>
-                    <input type='text' class='gh-input gh-attendee-details-input' />
+                  <div class="gh-label-group">
+                    <label class='gh-label'>Mobile Phone Number</label>
+                    <input type='text' class='gh-input ' />
                   </div>
-                  <div class="gh-label-input-group">
-                    <label class='gh-attendee-details-label'>* Name on Badge (How Attendee name will appear on badge)</label>
-                    <input type='text' class='gh-input gh-attendee-details-input' />
+                  <div class="gh-label-group">
+                    <label class='gh-label'>* Name on Badge (How Attendee name will appear on badge)</label>
+                    <input type='text' class='gh-input ' />
                   </div>
-                  <div class="gh-label-input-group">
-                    <label class='gh-attendee-details-label'>Dietary Restrictions/Special Requirements <span class='gh-attendee-details-char-count' id='diet-count-${idx}'>0/1200</span></label>
+                  <div class="gh-label-group">
+                    <label class='gh-label'>Dietary Restrictions/Special Requirements <span class='gh-attendee-details-char-count' id='diet-count-${idx}'>0/1200</span></label>
                     <textarea class='gh-textarea gh-attendee-details-textarea' rows='2' maxlength='1200' data-count-id='diet-count-${idx}'></textarea>
                   </div>
-                  <div class="gh-label-input-group">
-                    <label class='gh-attendee-details-label'>Comments <span class='gh-attendee-details-char-count' id='comments-count-${idx}'>0/1200</span></label>
+                  <div class="gh-label-group">
+                    <label class='gh-label'>Comments <span class='gh-attendee-details-char-count' id='comments-count-${idx}'>0/1200</span></label>
                     <textarea class='gh-textarea gh-attendee-details-textarea' rows='2' maxlength='1200' data-count-id='comments-count-${idx}' placeholder='e.g. I\'m interested in...'></textarea>
                   </div>
                   <div class='gh-attendee-details-flex-row'>
                     <div>
-                      <label class='gh-attendee-details-label'>Prayer Time?</label><br />
+                      <label class='gh-label'>Prayer Time?</label><br />
                       <label class='gh-attendee-details-radio-label'><input type='radio' name='prayer-time-${idx}' value='yes' class='gh-attendee-details-radio' /> Yes</label>
                       <label class='gh-attendee-details-radio-label'><input type='radio' name='prayer-time-${idx}' value='no' class='gh-attendee-details-radio' /> No</label>
                     </div>
                     <div class='gh-attendee-details-prayer-time-input'>
-                      <div class="gh-label-input-group">
-                        <label class='gh-attendee-details-label'>Enter prayer time</label>
-                        <input type='text' class='gh-input gh-attendee-details-input' />
+                      <div class="gh-label-group">
+                        <label class='gh-label'>Enter prayer time</label>
+                        <input type='text' class='gh-input ' />
                       </div>
                     </div>
                   </div>
