--- a/8.html
+++ b/8.html
@@ -102,7 +102,7 @@
           <!-- Left Column -->
           <div class="gh-travel-form-col">
             <h3 class="gh-travel-form-h3">Attendee Name</h3>
-            <div class="gh-label-input-group">
+            <div class="gh-label-group">
               <label class="gh-label" for="attendee-first-name"
                 >Attendee First Name</label
               >
@@ -113,7 +113,7 @@
                 value="Emma"
               />
             </div>
-            <div class="gh-label-input-group">
+            <div class="gh-label-group">
               <label class="gh-label" for="attendee-last-name"
                 >Attendee Last Name</label
               >
@@ -126,19 +126,19 @@
             </div>
 
             <h3 class="gh-travel-form-h3">Hotel</h3>
-            <div class="gh-label-input-group">
+            <div class="gh-label-group">
               <label class="gh-label">Confirmation Number (Hotel)</label>
               <input type="text" class="gh-input gh-input-mb1" />
             </div>
             <div class="gh-travel-form-row">
               <div class="gh-travel-form-row-col">
-                <div class="gh-label-input-group">
+                <div class="gh-label-group">
                   <label class="gh-label">Hotel Check In (mm/dd/yy)</label>
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
-                <div class="gh-label-input-group">
+                <div class="gh-label-group">
                   <label class="gh-label">Hotel Check Out (mm/dd/yy)</label>
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
@@ -155,13 +155,13 @@
             </div>
             <div class="gh-travel-form-row">
               <div class="gh-travel-form-row-col">
-                <div class="gh-label-input-group">
+                <div class="gh-label-group">
                   <label class="gh-label">Driving Arrival Date</label>
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
-                <div class="gh-label-input-group">
+                <div class="gh-label-group">
                   <label class="gh-label">Driving Arrival Time</label>
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
@@ -171,45 +171,45 @@
           <!-- Right Column -->
           <div class="gh-travel-form-col">
             <h3 class="gh-travel-form-h3">Flight</h3>
-            <div class="gh-label-input-group">
+            <div class="gh-label-group">
               <label class="gh-label">Arrival Airport</label>
               <input type="text" class="gh-input gh-input-mb1" />
             </div>
-            <div class="gh-label-input-group">
+            <div class="gh-label-group">
               <label class="gh-label">Arrival Airline</label>
               <input type="text" class="gh-input gh-input-mb1" />
             </div>
             <div class="gh-travel-form-row">
               <div class="gh-travel-form-row-col">
-                <div class="gh-label-input-group">
+                <div class="gh-label-group">
                   <label class="gh-label">Arrival Flight #</label>
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
-                <div class="gh-label-input-group">
+                <div class="gh-label-group">
                   <label class="gh-label">Arrival Time</label>
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
             </div>
-            <div class="gh-label-input-group">
+            <div class="gh-label-group">
               <label class="gh-label">Departure Airport</label>
               <input type="text" class="gh-input gh-input-mb1" />
             </div>
-            <div class="gh-label-input-group">
+            <div class="gh-label-group">
               <label class="gh-label">Departure Airline</label>
               <input type="text" class="gh-input gh-input-mb1" />
             </div>
             <div class="gh-travel-form-row">
               <div class="gh-travel-form-row-col">
-                <div class="gh-label-input-group">
+                <div class="gh-label-group">
                   <label class="gh-label">Departure Flight #</label>
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
-                <div class="gh-label-input-group">
+                <div class="gh-label-group">
                   <label class="gh-label">Departure Time</label>
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
