--- a/8.html
+++ b/8.html
@@ -102,27 +102,24 @@
           <!-- Left Column -->
           <div class="gh-travel-form-col">
             <h3 class="gh-travel-form-h3">Attendee Name</h3>
-            <div class="gh-label-group">
-              <label class="gh-label" for="attendee-first-name"
-                >Attendee First Name</label
-              >
-              <input
-                type="text"
-                id="attendee-first-name"
-                class="gh-input gh-input-mb1"
-                value="Emma"
-              />
-            </div>
-            <div class="gh-label-group">
-              <label class="gh-label" for="attendee-last-name"
-                >Attendee Last Name</label
-              >
-              <input
-                type="text"
-                id="attendee-last-name"
-                class="gh-input gh-input-mb2"
-                value="Callaghan"
-              />
+
+            <div class="gh-travel-form-row">
+              <div class="gh-travel-form-row-col">
+                <div class="gh-label-group">
+                  <label class="gh-label" for="attendee-first-name"
+                    >Attendee First Name</label
+                  >
+                  <input type="text" class="gh-input gh-input-mb1" />
+                </div>
+              </div>
+              <div class="gh-travel-form-row-col">
+                <div class="gh-label-group">
+                  <label class="gh-label" for="attendee-last-name"
+                    >Attendee Last Name</label
+                  >
+                  <input type="text" class="gh-input gh-input-mb1" />
+                </div>
+              </div>
             </div>
 
             <h3 class="gh-travel-form-h3">Hotel</h3>
