--- a/8.html
+++ b/8.html
@@ -66,35 +66,35 @@
                 value="emma_callaghan"
                 checked
               />
-              Callaghan, Emma</label
+              <span class="gh-radio-label-text">Callaghan, Emma</span></label
             >
             <label
               ><input type="radio" name="attendee" value="emily_compaan" />
-              Compaan, Emily</label
+              <span class="gh-radio-label-text">Compaan, Emily</span></label
             >
             <label
               ><input type="radio" name="attendee" value="gary_fischbach" />
-              Fischbach, Gary</label
+              <span class="gh-radio-label-text">Fischbach, Gary</span></label
             >
             <label
-              ><input type="radio" name="attendee" value="craig_gebel" /> Gebel,
-              Craig</label
+              ><input type="radio" name="attendee" value="craig_gebel" />
+              <span class="gh-radio-label-text">Gebel, Craig</span></label
             >
             <label
               ><input type="radio" name="attendee" value="kyle_lakanen" />
-              Lakanen, Kyle</label
+              <span class="gh-radio-label-text">Lakanen, Kyle</span></label
             >
             <label
-              ><input type="radio" name="attendee" value="mike_lind" /> Lind,
-              Mike</label
+              ><input type="radio" name="attendee" value="mike_lind" />
+              <span class="gh-radio-label-text">Lind, Mike</span></label
             >
             <label
               ><input type="radio" name="attendee" value="logan_markuson" />
-              Markuson, Logan</label
+              <span class="gh-radio-label-text">Markuson, Logan</span></label
             >
             <label
               ><input type="radio" name="attendee" value="clay_smithers" />
-              Smithers, Clay</label
+              <span class="gh-radio-label-text">Smithers, Clay</span></label
             >
           </div>
         </div>
@@ -107,7 +107,7 @@
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
                   <label class="gh-label" for="attendee-first-name"
-                    >Attendee First Name</label
+                    ><span>Attendee First Name</span></label
                   >
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
@@ -115,7 +115,7 @@
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
                   <label class="gh-label" for="attendee-last-name"
-                    >Attendee Last Name</label
+                    ><span>Attendee Last Name</span></label
                   >
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
@@ -124,19 +124,25 @@
 
             <h3 class="gh-travel-form-h3">Hotel</h3>
             <div class="gh-label-group">
-              <label class="gh-label">Confirmation Number (Hotel)</label>
+              <label class="gh-label"
+                ><span>Confirmation Number (Hotel)</span></label
+              >
               <input type="text" class="gh-input gh-input-mb1" />
             </div>
             <div class="gh-travel-form-row">
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
-                  <label class="gh-label">Hotel Check In (mm/dd/yy)</label>
+                  <label class="gh-label"
+                    ><span>Hotel Check In (mm/dd/yy)</span></label
+                  >
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
-                  <label class="gh-label">Hotel Check Out (mm/dd/yy)</label>
+                  <label class="gh-label"
+                    ><span>Hotel Check Out (mm/dd/yy)</span></label
+                  >
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
@@ -153,13 +159,17 @@
             <div class="gh-travel-form-row">
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
-                  <label class="gh-label">Driving Arrival Date</label>
+                  <label class="gh-label"
+                    ><span>Driving Arrival Date</span></label
+                  >
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
-                  <label class="gh-label">Driving Arrival Time</label>
+                  <label class="gh-label"
+                    ><span>Driving Arrival Time</span></label
+                  >
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
@@ -169,45 +179,47 @@
           <div class="gh-travel-form-col">
             <h3 class="gh-travel-form-h3">Flight</h3>
             <div class="gh-label-group">
-              <label class="gh-label">Arrival Airport</label>
+              <label class="gh-label"><span>Arrival Airport</span></label>
               <input type="text" class="gh-input gh-input-mb1" />
             </div>
             <div class="gh-label-group">
-              <label class="gh-label">Arrival Airline</label>
+              <label class="gh-label"><span>Arrival Airline</span></label>
               <input type="text" class="gh-input gh-input-mb1" />
             </div>
             <div class="gh-travel-form-row">
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
-                  <label class="gh-label">Arrival Flight #</label>
+                  <label class="gh-label"><span>Arrival Flight #</span></label>
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
-                  <label class="gh-label">Arrival Time</label>
+                  <label class="gh-label"><span>Arrival Time</span></label>
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
             </div>
             <div class="gh-label-group">
-              <label class="gh-label">Departure Airport</label>
+              <label class="gh-label"><span>Departure Airport</span></label>
               <input type="text" class="gh-input gh-input-mb1" />
             </div>
             <div class="gh-label-group">
-              <label class="gh-label">Departure Airline</label>
+              <label class="gh-label"><span>Departure Airline</span></label>
               <input type="text" class="gh-input gh-input-mb1" />
             </div>
             <div class="gh-travel-form-row">
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
-                  <label class="gh-label">Departure Flight #</label>
+                  <label class="gh-label"
+                    ><span>Departure Flight #</span></label
+                  >
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
-                  <label class="gh-label">Departure Time</label>
+                  <label class="gh-label"><span>Departure Time</span></label>
                   <input type="text" class="gh-input gh-input-mb1" />
                 </div>
               </div>
