--- a/8.html
+++ b/8.html
@@ -109,7 +109,7 @@
                   <label class="gh-label" for="attendee-first-name"
                     ><span>Attendee First Name</span></label
                   >
-                  <input type="text" class="gh-input gh-input-mb1" />
+                  <input type="text" class="gh-input" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
@@ -117,7 +117,7 @@
                   <label class="gh-label" for="attendee-last-name"
                     ><span>Attendee Last Name</span></label
                   >
-                  <input type="text" class="gh-input gh-input-mb1" />
+                  <input type="text" class="gh-input" />
                 </div>
               </div>
             </div>
@@ -127,7 +127,7 @@
               <label class="gh-label"
                 ><span>Confirmation Number (Hotel)</span></label
               >
-              <input type="text" class="gh-input gh-input-mb1" />
+              <input type="text" class="gh-input" />
             </div>
             <div class="gh-travel-form-row">
               <div class="gh-travel-form-row-col">
@@ -135,7 +135,7 @@
                   <label class="gh-label"
                     ><span>Hotel Check In (mm/dd/yy)</span></label
                   >
-                  <input type="text" class="gh-input gh-input-mb1" />
+                  <input type="text" class="gh-input" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
@@ -143,7 +143,7 @@
                   <label class="gh-label"
                     ><span>Hotel Check Out (mm/dd/yy)</span></label
                   >
-                  <input type="text" class="gh-input gh-input-mb1" />
+                  <input type="text" class="gh-input" />
                 </div>
               </div>
             </div>
@@ -162,7 +162,7 @@
                   <label class="gh-label"
                     ><span>Driving Arrival Date</span></label
                   >
-                  <input type="text" class="gh-input gh-input-mb1" />
+                  <input type="text" class="gh-input" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
@@ -170,7 +170,7 @@
                   <label class="gh-label"
                     ><span>Driving Arrival Time</span></label
                   >
-                  <input type="text" class="gh-input gh-input-mb1" />
+                  <input type="text" class="gh-input" />
                 </div>
               </div>
             </div>
@@ -180,33 +180,33 @@
             <h3 class="gh-travel-form-h3">Flight</h3>
             <div class="gh-label-group">
               <label class="gh-label"><span>Arrival Airport</span></label>
-              <input type="text" class="gh-input gh-input-mb1" />
+              <input type="text" class="gh-input" />
             </div>
             <div class="gh-label-group">
               <label class="gh-label"><span>Arrival Airline</span></label>
-              <input type="text" class="gh-input gh-input-mb1" />
+              <input type="text" class="gh-input" />
             </div>
             <div class="gh-travel-form-row">
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
                   <label class="gh-label"><span>Arrival Flight #</span></label>
-                  <input type="text" class="gh-input gh-input-mb1" />
+                  <input type="text" class="gh-input" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
                   <label class="gh-label"><span>Arrival Time</span></label>
-                  <input type="text" class="gh-input gh-input-mb1" />
+                  <input type="text" class="gh-input" />
                 </div>
               </div>
             </div>
             <div class="gh-label-group">
               <label class="gh-label"><span>Departure Airport</span></label>
-              <input type="text" class="gh-input gh-input-mb1" />
+              <input type="text" class="gh-input" />
             </div>
             <div class="gh-label-group">
               <label class="gh-label"><span>Departure Airline</span></label>
-              <input type="text" class="gh-input gh-input-mb1" />
+              <input type="text" class="gh-input" />
             </div>
             <div class="gh-travel-form-row">
               <div class="gh-travel-form-row-col">
@@ -214,13 +214,13 @@
                   <label class="gh-label"
                     ><span>Departure Flight #</span></label
                   >
-                  <input type="text" class="gh-input gh-input-mb1" />
+                  <input type="text" class="gh-input" />
                 </div>
               </div>
               <div class="gh-travel-form-row-col">
                 <div class="gh-label-group">
                   <label class="gh-label"><span>Departure Time</span></label>
-                  <input type="text" class="gh-input gh-input-mb1" />
+                  <input type="text" class="gh-input" />
                 </div>
               </div>
             </div>
