--- a/5.html
+++ b/5.html
@@ -41,7 +41,7 @@
       <h1 class="gh-main-section-title">Customer Account</h1>
       <nav class="gh-stepper" aria-label="Reservation steps">
         <ul>
-          <li class="gh-step gh-step-active">Customer account</li>
+          <li class="gh-step gh-step-current">Customer account</li>
           <li class="gh-step">Attendees</li>
           <li class="gh-step">Rep Attendees</li>
           <li class="gh-step">Travel Info</li>
