--- a/6.html
+++ b/6.html
@@ -42,7 +42,7 @@
       <nav class="gh-stepper" aria-label="Reservation steps">
         <ul>
           <li class="gh-step gh-step-completed">Customer account</li>
-          <li class="gh-step gh-step-active">Attendees</li>
+          <li class="gh-step gh-step-current">Attendees</li>
           <li class="gh-step">Rep Attendees</li>
           <li class="gh-step">Travel Info</li>
           <li class="gh-step">Summary</li>
