--- a/7.html
+++ b/7.html
@@ -43,7 +43,7 @@
         <ul>
           <li class="gh-step gh-step-completed">Customer account</li>
           <li class="gh-step gh-step-completed">Attendees</li>
-          <li class="gh-step gh-step-active">Rep Attendees</li>
+          <li class="gh-step gh-step-current">Rep Attendees</li>
           <li class="gh-step">Travel Info</li>
           <li class="gh-step">Summary</li>
         </ul>
@@ -190,9 +190,9 @@
                 ${
                   expandedIndex === idx
                     ? `
-                <form class='gh-attendee-details-form' autocomplete='off'>
-                  <div class='gh-attendee-details-checkbox-row'>
-                    <label class='gh-attendee-details-checkbox-label'><input name='main-contact' type='checkbox' class='gh-attendee-details-main-contact' /> <span class='gh-attendee-details-checkbox-label-text'>Designate as main visit contact</span></label>
+                <form class='gh-details-form' autocomplete='off'>
+                  <div class='gh-checkbox-row'>
+                    <label class='gh-checkbox-label'><input name='main-contact' type='checkbox' class='gh-main-contact' /> <span class='gh-checkbox-label-text'>Designate as main visit contact</span></label>
                   </div>
                   <div class="gh-label-group">
                     <label class='gh-label'>Mobile Phone Number</label>
@@ -203,24 +203,30 @@
                     <input type='text' class='gh-input ' />
                   </div>
                   <div class="gh-label-group">
-                    <label class='gh-label'>Dietary Restrictions/Special Requirements <span class='gh-attendee-details-char-count' id='diet-count-${idx}'>0/1200</span></label>
-                    <textarea class='gh-textarea gh-attendee-details-textarea' rows='2' maxlength='1200' data-count-id='diet-count-${idx}'></textarea>
+                    <label class='gh-label'>Dietary Restrictions/Special Requirements <span class='gh-char-count' id='diet-count-${idx}'>0/1200</span></label>
+                    <textarea class='gh-textarea gh-textarea' rows='2' maxlength='1200' data-count-id='diet-count-${idx}'></textarea>
                   </div>
                   <div class="gh-label-group">
-                    <label class='gh-label'>Comments <span class='gh-attendee-details-char-count' id='comments-count-${idx}'>0/1200</span></label>
-                    <textarea class='gh-textarea gh-attendee-details-textarea' rows='2' maxlength='1200' data-count-id='comments-count-${idx}' placeholder='e.g. I\'m interested in...'></textarea>
+                    <label class='gh-label'>Comments <span class='gh-char-count' id='comments-count-${idx}'>0/1200</span></label>
+                    <textarea class='gh-textarea gh-textarea' rows='2' maxlength='1200' data-count-id='comments-count-${idx}' placeholder='e.g. I\'m interested in...'></textarea>
                   </div>
-                  <div class='gh-attendee-details-flex-row'>
-                    <div>
-                      <label class='gh-label'>Prayer Time?</label><br />
-                      <label class='gh-attendee-details-radio-label'><input type='radio' name='prayer-time-${idx}' value='yes' class='gh-attendee-details-radio' /> Yes</label>
-                      <label class='gh-attendee-details-radio-label'><input type='radio' name='prayer-time-${idx}' value='no' class='gh-attendee-details-radio' /> No</label>
-                    </div>
-                    <div class='gh-attendee-details-prayer-time-input'>
-                      <div class="gh-label-group">
-                        <label class='gh-label'>Enter prayer time</label>
-                        <input type='text' class='gh-input ' />
+                  <div class='gh-flex-row'>
+                    <div class='gh-label-group w-auto' role='radiogroup' aria-labelledby='prayer-time-label-${idx}'>
+                      <label class='gh-label' id='prayer-time-label-${idx}' for='prayer-time-yes-${idx}'><span>Prayer Time?</span></label>
+                      <div class="gh-radio-label-yn-container">
+                        <label class='gh-radio-label' for='prayer-time-yes-${idx}'>
+                          <input type='radio' id='prayer-time-yes-${idx}' name='prayer-time-${idx}' value='yes' class='gh-radio' aria-checked='false' aria-labelledby='prayer-time-label-${idx} prayer-time-yes-label-${idx}' />
+                          <span class='gh-radio-label-text-yn' id='prayer-time-yes-label-${idx}'>Yes</span>
+                        </label>
+                        <label class='gh-radio-label' for='prayer-time-no-${idx}'>
+                          <input type='radio' id='prayer-time-no-${idx}' name='prayer-time-${idx}' value='no' class='gh-radio' aria-checked='false' aria-labelledby='prayer-time-label-${idx} prayer-time-no-label-${idx}' />
+                          <span class='gh-radio-label-text-yn' id='prayer-time-no-label-${idx}'>No</span>
+                        </label>
                       </div>
+                    </div>
+                    <div class="gh-label-group flex-1">
+                      <label class='gh-label' for='prayer-time-input-${idx}'><span>Enter prayer time</span></label>
+                      <input type='text' id='prayer-time-input-${idx}' class='gh-input' aria-label='Enter prayer time' />
                     </div>
                   </div>
                 </form>
@@ -248,19 +254,17 @@
         }
         function addDetailsCharCountListeners(idx) {
           // Add char count for textareas
-          const form = selectedList.querySelector('.gh-attendee-details-form');
+          const form = selectedList.querySelector('.gh-details-form');
           if (!form) return;
-          form
-            .querySelectorAll('.gh-attendee-details-textarea')
-            .forEach((textarea) => {
-              const countId = textarea.getAttribute('data-count-id');
-              const countSpan = document.getElementById(countId);
-              textarea.addEventListener('input', function () {
-                countSpan.textContent = `${this.value.length}/1200`;
-              });
-              // Initialize count
-              countSpan.textContent = `${textarea.value.length}/1200`;
+          form.querySelectorAll('.gh-textarea').forEach((textarea) => {
+            const countId = textarea.getAttribute('data-count-id');
+            const countSpan = document.getElementById(countId);
+            textarea.addEventListener('input', function () {
+              countSpan.textContent = `${this.value.length}/1200`;
             });
+            // Initialize count
+            countSpan.textContent = `${textarea.value.length}/1200`;
+          });
         }
         options.forEach((cb) => {
           cb.addEventListener('change', function () {
