Refactor HTML structure and improve styling consistency across multiple pages. Updated user info display, adjusted layout margins, and enhanced button styles for better UX. Fixed minor inconsistencies in class names and added missing elements for improved accessibility.

--- a/8.html
+++ b/8.html
@@ -21,7 +21,7 @@
       <div class="gh-header-right">
         <div class="gh-user-info">
           <span class="material-symbols-outlined" aria-hidden="true">person_outline</span>
-          <span>Welcome, Gary</span>
+          <span class="gh-user-info-text">Welcome, Gary</span>
         </div>
         <span class="gh-header-title">Customer Visit Planner</span>
       </div>
