--- a/2.html
+++ b/2.html
@@ -1,156 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>
-      Select a New Customer Visit | Greenheck Customer Visit Planner
-    </title>
-    <meta
-      name="description"
-      content="Reserve a new visit from the available dates at Greenheck."
-    />
 
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>
+    Select a New Customer Visit | Greenheck Customer Visit Planner
+  </title>
+  <meta name="description" content="Reserve a new visit from the available dates at Greenheck." />
 
-    <link rel="stylesheet" href="styles/base.css" />
-  </head>
-  <body>
-    <header class="gh-header">
-      <div class="gh-header-container">
-        <div class="gh-header-left">
-          <img
-            src="Greenheck_Logo_Horiz_Blue@2x.png"
-            alt="Greenheck Logo"
-            class="gh-logo"
-          />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+  <link rel="stylesheet" href="styles/base.css" />
+</head>
+
+<body>
+  <header class="gh-header">
+    <div class="gh-header-container">
+      <div class="gh-header-left">
+        <img src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" />
+      </div>
+      <div class="gh-header-right">
+        <div class="gh-user-info">
+          <span class="material-symbols-outlined" aria-hidden="true">person_outline</span>
+          <span class="gh-user-info-text">Welcome, Gary</span>
         </div>
-        <div class="gh-header-right">
-          <div class="gh-user-info">
-            <span class="material-symbols-outlined" aria-hidden="true"
-              >person_outline</span
-            >
-            <span>Welcome, Gary</span>
-          </div>
-          <span class="gh-header-title">Customer Visit Planner</span>
-        </div>
+        <span class="gh-header-title">Customer Visit Planner</span>
       </div>
-    </header>
-    <main class="gh-main gh-main-table">
-      <h1 class="gh-main-section-title">Select a New Customer Visit</h1>
-      <p class="gh-main-desc">
-        Reserve a new visit from the availability below.
-      </p>
-      <div class="gh-table-container">
-        <table class="gh-table">
-          <thead>
-            <tr>
-              <th>Date</th>
-              <th>Location</th>
-              <th>Visit Duration</th>
-              <th>
-                Group Availability
-                <span
-                  class="material-symbols-outlined text-14 flex-center"
-                  title="Number of groups that can be accommodated"
-                  >help</span
-                >
-              </th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><strong>07/21/2025</strong></td>
-              <td>Schofield, WI</td>
-              <td><strong>Monday Arrival; Wednesday Departure</strong></td>
-              <td class="gh-table-availability gh-available">
-                2 groups available
-              </td>
-              <td>
-                <button class="gh-btn gh-btn-table reserve-visit">
-                  Reserve
-                </button>
-              </td>
-            </tr>
-            <tr>
-              <td><strong>07/23/2025</strong></td>
-              <td>Schofield, WI</td>
-              <td><strong>Wednesday Arrival; Friday Departure</strong></td>
-              <td class="gh-table-availability gh-available">
-                1 group available
-              </td>
-              <td>
-                <button class="gh-btn gh-btn-table reserve-visit">
-                  Reserve
-                </button>
-              </td>
-            </tr>
-            <tr>
-              <td><strong>07/28/2025</strong></td>
-              <td>Schofield, WI</td>
-              <td><strong>Monday Arrival; Wednesday Departure</strong></td>
-              <td class="gh-table-availability gh-available">
-                2 groups available
-              </td>
-              <td>
-                <button class="gh-btn gh-btn-table reserve-visit">
-                  Reserve
-                </button>
-              </td>
-            </tr>
-            <tr>
-              <td><strong>08/04/2025</strong></td>
-              <td>Schofield, WI</td>
-              <td><strong>Monday Arrival; Wednesday Departure</strong></td>
-              <td class="gh-table-availability gh-available">
-                2 groups available
-              </td>
-              <td>
-                <button class="gh-btn gh-btn-table reserve-visit">
-                  Reserve
-                </button>
-              </td>
-            </tr>
-            <tr>
-              <td><strong>08/27/2025</strong></td>
-              <td>Schofield, WI</td>
-              <td><strong>Wednesday Arrival; Friday Departure</strong></td>
-              <td class="gh-table-availability gh-available">
-                3 groups available
-              </td>
-              <td>
-                <button class="gh-btn gh-btn-table reserve-visit">
-                  Reserve
-                </button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </main>
-    <footer class="gh-footer">
-      <div class="gh-footer-logo">
-        <img
-          src="Greenheck_Logo_Horiz_Blue@2x.png"
-          alt="Greenheck Logo"
-          class="gh-footer-logo-img"
-        />
-      </div>
-      <div class="gh-footer-address">
-        &copy; <span id="year"></span> Greenheck Fan Corporation. All rights
-        reserved. P.O. BOX 410 | Schofield, WI 54476 |
-        <a href="tel:+17153596171">(715) 359-6171</a>
-      </div>
-    </footer>
-    <script src="scripts/main.js"></script>
-  </body>
+    </div>
+  </header>
+  <main class="gh-main gh-main-table">
+    <h1 class="gh-main-section-title">Select a New Customer Visit</h1>
+    <p class="gh-main-desc">
+      Reserve a new visit from the availability below.
+    </p>
+    <div class="gh-table-container">
+      <table class="gh-table">
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Location</th>
+            <th>Visit Duration</th>
+            <th>
+              Group Availability
+              <span class="material-symbols-outlined text-14 flex-center" title="Number of groups that can be accommodated">help</span>
+            </th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><strong>07/21/2025</strong></td>
+            <td>Schofield, WI</td>
+            <td><strong>Monday Arrival; Wednesday Departure</strong></td>
+            <td class="gh-table-availability gh-available">
+              2 groups available
+            </td>
+            <td>
+              <button class="gh-btn gh-btn-table reserve-visit">
+                Reserve
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td><strong>07/23/2025</strong></td>
+            <td>Schofield, WI</td>
+            <td><strong>Wednesday Arrival; Friday Departure</strong></td>
+            <td class="gh-table-availability gh-available">
+              1 group available
+            </td>
+            <td>
+              <button class="gh-btn gh-btn-table reserve-visit">
+                Reserve
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td><strong>07/28/2025</strong></td>
+            <td>Schofield, WI</td>
+            <td><strong>Monday Arrival; Wednesday Departure</strong></td>
+            <td class="gh-table-availability gh-available">
+              2 groups available
+            </td>
+            <td>
+              <button class="gh-btn gh-btn-table reserve-visit">
+                Reserve
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td><strong>08/04/2025</strong></td>
+            <td>Schofield, WI</td>
+            <td><strong>Monday Arrival; Wednesday Departure</strong></td>
+            <td class="gh-table-availability gh-available">
+              2 groups available
+            </td>
+            <td>
+              <button class="gh-btn gh-btn-table reserve-visit">
+                Reserve
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td><strong>08/27/2025</strong></td>
+            <td>Schofield, WI</td>
+            <td><strong>Wednesday Arrival; Friday Departure</strong></td>
+            <td class="gh-table-availability gh-available">
+              3 groups available
+            </td>
+            <td>
+              <button class="gh-btn gh-btn-table reserve-visit">
+                Reserve
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </main>
+  <footer class="gh-footer">
+    <div class="gh-footer-logo">
+      <img src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-footer-logo-img" />
+    </div>
+    <div class="gh-footer-address">
+      &copy; <span id="year"></span> Greenheck Fan Corporation. All rights
+      reserved. P.O. BOX 410 | Schofield, WI 54476 |
+      <a href="tel:+17153596171">(715) 359-6171</a>
+    </div>
+  </footer>
+  <script src="scripts/main.js"></script>
+</body>
+
 </html>
