--- a/9.html
+++ b/9.html
@@ -21,7 +21,7 @@
       <div class="gh-header-right">
         <div class="gh-user-info">
           <span class="material-symbols-outlined" aria-hidden="true">person_outline</span>
-          <span>Welcome, Gary</span>
+          <span class="gh-user-info-text">Welcome, Gary</span>
         </div>
         <span class="gh-header-title">Customer Visit Planner</span>
       </div>
