Enhance table styling and structure across multiple HTML files. Added a new class for regular font styling, improved header layout with icons, and adjusted padding for better visual consistency. Updated font sizes and families for improved readability.

--- a/2.html
+++ b/2.html
@@ -44,8 +44,10 @@
             <th>Location</th>
             <th>Visit Duration</th>
             <th>
-              Group Availability
-              <span class="material-symbols-outlined text-14 flex-center" title="Number of groups that can be accommodated">help</span>
+              <div class="gh-table-header-with-icon">
+                <span>Group Availability</span>
+                <span class="material-symbols-outlined text-16 flex-center icon-help" title="Number of groups that can be accommodated">help</span>
+              </div>
             </th>
             <th></th>
           </tr>
@@ -53,7 +55,7 @@
         <tbody>
           <tr>
             <td><strong>07/21/2025</strong></td>
-            <td>Schofield, WI</td>
+            <td class="gh-table-regular-font">Schofield, WI</td>
             <td><strong>Monday Arrival; Wednesday Departure</strong></td>
             <td class="gh-table-availability gh-available">
               2 groups available
@@ -66,7 +68,7 @@
           </tr>
           <tr>
             <td><strong>07/23/2025</strong></td>
-            <td>Schofield, WI</td>
+            <td class="gh-table-regular-font">Schofield, WI</td>
             <td><strong>Wednesday Arrival; Friday Departure</strong></td>
             <td class="gh-table-availability gh-available">
               1 group available
@@ -79,7 +81,7 @@
           </tr>
           <tr>
             <td><strong>07/28/2025</strong></td>
-            <td>Schofield, WI</td>
+            <td class="gh-table-regular-font">Schofield, WI</td>
             <td><strong>Monday Arrival; Wednesday Departure</strong></td>
             <td class="gh-table-availability gh-available">
               2 groups available
@@ -92,7 +94,7 @@
           </tr>
           <tr>
             <td><strong>08/04/2025</strong></td>
-            <td>Schofield, WI</td>
+            <td class="gh-table-regular-font">Schofield, WI</td>
             <td><strong>Monday Arrival; Wednesday Departure</strong></td>
             <td class="gh-table-availability gh-available">
               2 groups available
@@ -105,7 +107,7 @@
           </tr>
           <tr>
             <td><strong>08/27/2025</strong></td>
-            <td>Schofield, WI</td>
+            <td class="gh-table-regular-font">Schofield, WI</td>
             <td><strong>Wednesday Arrival; Friday Departure</strong></td>
             <td class="gh-table-availability gh-available">
               3 groups available
