--- a/3.html
+++ b/3.html
@@ -52,7 +52,7 @@
           <tbody>
             <tr>
               <td><strong>07/21/2025</strong></td>
-              <td>Schofield, WI</td>
+              <td class="gh-table-regular-font">Schofield, WI</td>
               <td><strong>Monday Arrival; Wednesday Departure</strong></td>
               <td>Scheduled</td>
               <td>
@@ -92,7 +92,7 @@
           <tbody>
             <tr>
               <td><strong>07/21/2025</strong></td>
-              <td>Schofield, WI</td>
+              <td class="gh-table-regular-font">Schofield, WI</td>
               <td><strong>Monday Arrival; Wednesday Departure</strong></td>
               <td class="gh-table-availability gh-available">
                 1 groups available
@@ -105,7 +105,7 @@
             </tr>
             <tr>
               <td><strong>07/23/2025</strong></td>
-              <td>Schofield, WI</td>
+              <td class="gh-table-regular-font">Schofield, WI</td>
               <td><strong>Wednesday Arrival; Friday Departure</strong></td>
               <td class="gh-table-availability gh-available">
                 1 group available
@@ -118,7 +118,7 @@
             </tr>
             <tr>
               <td><strong>07/28/2025</strong></td>
-              <td>Schofield, WI</td>
+              <td class="gh-table-regular-font">Schofield, WI</td>
               <td><strong>Monday Arrival; Wednesday Departure</strong></td>
               <td class="gh-table-availability gh-available">
                 2 groups available
@@ -131,7 +131,7 @@
             </tr>
             <tr>
               <td><strong>08/04/2025</strong></td>
-              <td>Schofield, WI</td>
+              <td class="gh-table-regular-font">Schofield, WI</td>
               <td><strong>Monday Arrival; Wednesday Departure</strong></td>
               <td class="gh-table-availability gh-available">
                 2 groups available
@@ -144,7 +144,7 @@
             </tr>
             <tr>
               <td><strong>08/27/2025</strong></td>
-              <td>Schofield, WI</td>
+              <td class="gh-table-regular-font">Schofield, WI</td>
               <td><strong>Wednesday Arrival; Friday Departure</strong></td>
               <td class="gh-table-availability gh-available">
                 3 groups available
