--- a/4.html
+++ b/4.html
@@ -42,14 +42,14 @@
             <th>Visit Duration</th>
             <th>
               Number of Groups
-              <span class="material-symbols-outlined text-14 flex-center" title="Number of groups that can be accommodated">help</span>
+              <span class="material-symbols-outlined icon-help" title="Number of groups that can be accommodated">help</span>
             </th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <td><strong>07/21/2025</strong></td>
-            <td>Schofield, WI</td>
+            <td class="gh-table-regular-font">Schofield, WI</td>
             <td><strong>Monday Arrival; Wednesday Departure</strong></td>
             <td>1 group</td>
           </tr>
