Refactor table headers in HTML files to improve layout and accessibility. Wrapped header text and icons in a div for better structure and styling consistency.

--- a/3.html
+++ b/3.html
@@ -83,8 +83,10 @@
               <th>Location</th>
               <th>Visit Duration</th>
               <th>
-                Group Availability
-                <span class="material-symbols-outlined gh-info-icon" title="Number of groups that can be accommodated">info</span>
+                <div class="gh-table-header-with-icon">
+                  <span>Group Availability</span>
+                  <span class="material-symbols-outlined text-16 flex-center icon-help" title="Number of groups that can be accommodated">help</span>
+                </div>
               </th>
               <th></th>
             </tr>
