--- a/4.html
+++ b/4.html
@@ -41,8 +41,11 @@
             <th>Location</th>
             <th>Visit Duration</th>
             <th>
-              Number of Groups
-              <span class="material-symbols-outlined icon-help" title="Number of groups that can be accommodated">help</span>
+              <div class="gh-table-header-with-icon">
+                <span> Number of Groups
+                </span>
+                <span class="material-symbols-outlined text-16 flex-center icon-help" title="Number of groups that can be accommodated">help</span>
+              </div>
             </th>
           </tr>
         </thead>
