--- a/9.html
+++ b/9.html
@@ -28,12 +28,15 @@
     </div>
   </header>
   <main class="gh-main gh-main-form">
-    <h1 class="gh-main-section-title">Reservation Summary</h1>
-    <div class="gh-text-right gh-mb-1-5">
-      <button class="gh-btn gh-btn-outline" onclick="window.location.href='index.html'">
+    <div class="gh-main-title" >
+      <h1 class="gh-main-section-title">Reservation Summary</h1>
+      <div class="gh-text-right gh-mb-1-5">
+       <button class="gh-btn gh-btn-outline" onclick="window.location.href='index.html'">
         Return to Main Planner Start Page
-      </button>
+       </button>
+      </div>
     </div>
+    
     <nav class="gh-stepper" aria-label="Reservation steps">
       <ul>
         <li class="gh-step gh-step-completed">Customer account</li>
