Enhance accessibility and user experience by updating tooltip functionality and improving dropdown keyboard navigation. Added aria attributes for better screen reader support and implemented focus management for dropdown options. Updated table headers in HTML files to provide clearer help text for group availability.

--- a/4.html
+++ b/4.html
@@ -44,7 +44,8 @@
               <div class="gh-table-header-with-icon">
                 <span> Number of Groups
                 </span>
-                <span class="material-symbols-outlined text-16 flex-center icon-help" title="Number of groups that can be accommodated">help</span>
+                <span class="material-symbols-outlined text-16 flex-center icon-help js-tooltip" title="Capacity shown is by group, with up to 8 people per group." tabindex="0"
+                  aria-label="Help: Capacity shown is by group, with up to 8 people per group.">help</span>
               </div>
             </th>
           </tr>
