--- a/3.html
+++ b/3.html
@@ -85,7 +85,9 @@
               <th>
                 <div class="gh-table-header-with-icon">
                   <span>Group Availability</span>
-                  <span class="material-symbols-outlined text-16 flex-center icon-help" title="Number of groups that can be accommodated">help</span>
+                  <span class="material-symbols-outlined text-16 flex-center icon-help js-tooltip" title="Capacity shown is by group, with up to 8 people per group." tabindex="0"
+                    aria-label="Help: Capacity shown is by group, with up to 8 people per group.">help</span>
+
                 </div>
               </th>
               <th></th>
